--- a/index.html
+++ b/index.html
@@ -6,15 +6,15 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <script src="./assets/js/index.js" defer></script>
-  <link rel="stylesheet" href="./assets/css/reset.css">
+  <!-- <link rel="stylesheet" href="./assets/css/reset.css"> -->
   <link rel="stylesheet" href="./assets/css/styles.css">
   <title>Document</title>
 </head>
 
 <body>
   <section class="listWrap">
-    <ul>
-      <li>Lorem ipsum dolor sit amet.
+    <ul id="mainList">
+      <li class="headListItem">Lorem ipsum dolor sit amet.
         <ul>
           <li>Lorem ipsum dolor sit amet consectetur.</li>
           <li>Lorem ipsum dolor sit.</li>
@@ -23,7 +23,7 @@
           <li>Lorem, ipsum dolor.</li>
         </ul>
       </li>
-      <li>Lorem ipsum dolor sit amet.
+      <li class="headListItem">in quas assumenda consectetur accusantium!
         <ul>
           <li>Lorem ipsum dolor sit amet consectetur.</li>
           <li>Lorem ipsum dolor sit.</li>
@@ -32,7 +32,7 @@
           <li>Lorem, ipsum dolor.</li>
         </ul>
       </li>
-      <li>Lorem ipsum dolor sit amet.
+      <li class="headListItem">Est tempore quisquam ipsam quos vitae repellat.
         <ul>
           <li>Lorem ipsum dolor sit amet consectetur.</li>
           <li>Lorem ipsum dolor sit.</li>
@@ -41,7 +41,7 @@
           <li>Lorem, ipsum dolor.</li>
         </ul>
       </li>
-      <li>Lorem ipsum dolor sit amet.
+      <li class="headListItem">Lorem consectetur adipisicing elit. 
         <ul>
           <li>Lorem ipsum dolor sit amet consectetur.</li>
           <li>Lorem ipsum dolor sit.</li>
@@ -55,3 +55,5 @@
 </body>
 
 </html>
+
+Lorem ipsum dolor sit amet consectetur adipisicing elit.  
