--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <section class="listWrap">
     <ul id="mainList">
       <li class="headListItem">Lorem ipsum dolor sit amet.
-        <ul class="subList">
+        <ul class="subList" hidden>
           <li>Lorem ipsum dolor sit amet consectetur.</li>
           <li>Lorem ipsum dolor sit.</li>
           <li>Lorem ipsum dolor sit amet.</li>
@@ -24,7 +24,7 @@
         </ul>
       </li>
       <li class="headListItem">in quas assumenda consectetur accusantium!
-        <ul class="subList">
+        <ul class="subList" hidden>
           <li>Lorem ipsum dolor sit amet consectetur.</li>
           <li>Lorem ipsum dolor sit.</li>
           <li>Lorem ipsum dolor sit amet.</li>
@@ -33,7 +33,7 @@
         </ul>
       </li>
       <li class="headListItem">Est tempore quisquam ipsam quos vitae repellat.
-        <ul class="subList">
+        <ul class="subList" hidden>
           <li>Lorem ipsum dolor sit amet consectetur.</li>
           <li>Lorem ipsum dolor sit.</li>
           <li>Lorem ipsum dolor sit amet.</li>
@@ -42,7 +42,7 @@
         </ul>
       </li>
       <li class="headListItem">Lorem consectetur adipisicing elit. 
-        <ul class="subList">
+        <ul class="subList" hidden>
           <li>Lorem ipsum dolor sit amet consectetur.</li>
           <li>Lorem ipsum dolor sit.</li>
           <li>Lorem ipsum dolor sit amet.</li>
