add solutin for task 1.2

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
           <li>Lorem, ipsum dolor.</li>
         </ul>
       </li>
-      <li class="headListItem">in quas assumenda consectetur accusantium!
+      <li class="headListItem">In quas assumenda consectetur accusantium!
         <ul class="subList" hidden>
           <li>Lorem ipsum dolor sit amet consectetur.</li>
           <li>Lorem ipsum dolor sit.</li>
