create html structure

--- a/index.html
+++ b/index.html
@@ -13,7 +13,37 @@
 
 <body>
   <section class="listWrap">
-    
+    <table id="usersTable">
+      <thead>
+        <tr>
+          <td>Name</td>
+          <td>Email</td>
+          <td>Delete</td>
+        </tr>
+      </thead>
+      <tbody>
+        <tr>
+          <td>NameUser</td>
+          <td>email@test.ua</td>
+          <td><button class="delBtn">Delete</button> </td>
+        </tr>
+        <tr>
+          <td>Lorem, ipsum.</td>
+          <td>9mohamed.darweshl@gmailwe.com</td>
+          <td><button class="delBtn">Delete</button> </td>
+        </tr>
+        <tr>
+          <td>Lorem, ipsum dolor.</td>
+          <td>mbaghora@mailpluss.com</td>
+          <td><button class="delBtn">Delete</button> </td>
+        </tr>
+        <tr>
+          <td>Lorem ipsum dolor sit.</td>
+          <td>rmrangeltsz8@jimong.com</td>
+          <td><button class="delBtn">Delete</button> </td>
+        </tr>
+      </tbody>
+    </table>
   </section>
 </body>
 
