--- a/index.html
+++ b/index.html
@@ -44,6 +44,11 @@
         </tr>
       </tbody>
     </table>
+    <form id="createUserForm" action="submit" >
+      <input type="text" name="name" minlength="3" required>
+      <input type="email" name="email" required>
+      <button type="submit">Add User</button>
+    </form>
   </section>
 </body>
 
